add html files and create disciplines controller and files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <a href="/users">Go to the Home Page</a>
+    <a href="/users/new">Add a New User</a>
+    <br>
+
+
     <%= yield %>
   </body>
 </html>
